# iggy

./: Cargo.toml  DEPENDENCIES.md  Dockerfile  PULL_REQUEST_TEMPLATE  README.md
.config/: nextest.toml
core/integration/: Cargo.toml  README.md
core/integration/src/: bench_utils.rs  common_types.rs  external_server.rs  http_client.rs  lib.rs  quic_client.rs  tcp_client.rs  tcp_client_sync.rs  test_server.rs  test_server_builder.rs  test_server_provider.rs
core/integration/tests/: mod.rs
core/integration/tests/archiver/: mod.rs
core/integration/tests/cli/client/: test_client_get_command.rs  test_client_help_command.rs  test_client_list_command.rs
core/integration/tests/cli/common/: command.rs  mod.rs
core/integration/tests/cli/consumer_group/: test_consumer_group_create_command.rs  test_consumer_group_delete_command.rs  test_consumer_group_get_command.rs  test_consumer_group_help_command.rs  test_consumer_group_list_command.rs
core/integration/tests/cli/consumer_offset/: test_consumer_offset_get_command.rs  test_consumer_offset_set_command.rs
core/integration/tests/cli/context/: common.rs  test_context_applied.rs  test_context_list_command.rs  test_context_use_command.rs
core/integration/tests/cli/general/: test_help_command.rs  test_missing_credentials.rs  test_overview_command.rs  test_quiet_mode.rs
core/integration/tests/cli/message/: test_message_flush_command.rs  test_message_help_command.rs  test_message_poll_command.rs  test_message_poll_to_file_command.rs  test_message_reply_via_file.rs  test_message_send_command.rs  test_message_send_from_file_command.rs
core/integration/tests/cli/partition/: test_partition_create_command.rs  test_partition_delete_command.rs  test_partition_help_command.rs
core/integration/tests/cli/personal_access_token/: mod.rs  test_pat_create_command.rs  test_pat_delete_command.rs  test_pat_help_command.rs  test_pat_list_command.rs  test_pat_login_options.rs
core/integration/tests/cli/stream/: test_stream_create_command.rs  test_stream_delete_command.rs  test_stream_get_command.rs  test_stream_help_command.rs  test_stream_list_command.rs  test_stream_purge_command.rs  test_stream_update_command.rs
core/integration/tests/cli/system/: test_cli_session_scenario.rs  test_login_cmd.rs  test_login_command.rs  test_logout_cmd.rs  test_logout_command.rs  test_me_command.rs  test_ping_command.rs  test_snapshot_cmd.rs  test_stats_command.rs
core/integration/tests/cli/topic/: test_topic_create_command.rs  test_topic_delete_command.rs  test_topic_get_command.rs  test_topic_help_command.rs  test_topic_list_command.rs  test_topic_purge_command.rs  test_topic_update_command.rs
core/integration/tests/cli/user/: test_login_options.rs  test_user_create_command.rs  test_user_delete_command.rs  test_user_get_command.rs  test_user_help_command.rs  test_user_list_command.rs  test_user_name_command.rs  test_user_password_command.rs  test_user_permissions_command.rs  test_user_status_command.rs
core/integration/tests/config_provider/: mod.rs
core/integration/tests/connectors/: mod.rs
core/integration/tests/data_integrity/: verify_after_server_restart.rs
core/integration/tests/mcp/: mod.rs
core/integration/tests/sdk/: mod.rs
core/integration/tests/server/: cg.rs  concurrent_addition.rs  general.rs  mod.rs
core/integration/tests/state/: file.rs  system.rs
core/integration/tests/streaming/: get_by_offset.rs  get_by_timestamp.rs  messages.rs  mod.rs  partition.rs
core/sdk/: Cargo.toml
core/sdk/src/: client_provider.rs  lib.rs  prelude.rs
core/sdk/src/client_provider/: async_impl.rs  common.rs  mod.rs  sync_impl.rs
core/sdk/src/client_wrappers/: binary_client.rs  binary_consumer_group_client.rs  binary_consumer_offset_client.rs  binary_message_client.rs  binary_partition_client.rs  binary_personal_access_token_client.rs  binary_segment_client.rs  binary_stream_client.rs  binary_system_client.rs  binary_topic_client.rs  binary_user_client.rs  client_wrapper.rs  mod.rs
core/sdk/src/clients/: binary_consumer_group.rs  binary_consumer_offset.rs  binary_message.rs  binary_partitions.rs  binary_personal_access_tokens.rs  binary_segments.rs  binary_streams.rs  binary_system.rs  binary_topics.rs  binary_users.rs  client.rs  client_builder.rs  consumer.rs  consumer_builder.rs  mod.rs  producer.rs  producer_builder.rs  producer_config.rs  producer_dispatcher.rs  producer_error_callback.rs  producer_sharding.rs
core/sdk/src/connection/: mod.rs  transport.rs
core/sdk/src/consumer_ext/: async_impl.rs  consumer_message_trait.rs  helpers.rs  mod.rs  sync_impl.rs
core/sdk/src/driver/: mod.rs  new_tcp.rs  tcp.rs
core/sdk/src/http/: binary_consumer_groups.rs  binary_consumer_offsets.rs  binary_messages.rs  binary_partitions.rs  binary_personal_access_tokens.rs  binary_segments.rs  binary_streams.rs  binary_system.rs  binary_topics.rs  binary_users.rs  http_client.rs  http_transport.rs
core/sdk/src/proto/: connection.rs  mod.rs  runtime.rs  send_buffer.rs  tcp_adapter.rs
core/sdk/src/protocol/: core.rs  mod.rs
core/sdk/src/quic/: mod.rs  quic_client.rs  quick_client.rs
core/sdk/src/runtime/: mod.rs  sync.rs  tokio.rs
core/sdk/src/stream_builder/: iggy_stream.rs  iggy_stream_consumer.rs  iggy_stream_producer.rs
core/sdk/src/tcp/: mod.rs  tcp_client.rs  tcp_client_sync.rs  tcp_connection_stream.rs  tcp_connection_stream_kind.rs  tcp_stream.rs  tcp_tls_connection_stream.rs
core/sdk/src/transport_adapter/: async.rs  connection.rs  mod.rs  quic.rs  state.rs
core/sdk/src/transport_factory/: mod.rs
core/sdk/src/websocket/: mod.rs  websocket_client.rs  websocket_connection_stream.rs
(+746 files in other folders)
